--- a/index.html
+++ b/index.html
@@ -328,8 +328,8 @@
                 if (socialCredits <= 0) {
                   const ed = new Date(Date.now() + 48 * 60 * 60 * 1000);
                   main.innerHTML += `<span id='score'>EXECUTION DATE: <b>${
-                    ed.getFullYear
-                  }/${ed.getMonth}/${ed.getDate()}</b></span>`;
+                    ed.getFullYear()
+                  }/${ed.getMonth()}/${ed.getDate()}</b></span>`;
                 }
                 scrollToBottom();
               }
